<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

    <EditText
        android:id="@+id/etPlaca"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_normal_height"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:background="@drawable/shape_border_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/plate_number"
        android:inputType="textPersonName"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginBottom="4dp"
        android:background="@drawable/shape_border_sections"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPlaca">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnAddIn"
                android:layout_width="@dimen/btn_normal_width"
                android:layout_height="@dimen/btn_normal_height"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:background="@drawable/shape_button"
                android:text="@string/btn_accept_text"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/btn_normal_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etCilindraje" />

            <EditText
                android:id="@+id/etCilindraje"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_normal_height"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/shape_border_edit_text"
                android:ems="10"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/cilindraje_text"
                android:inputType="number"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintEnd_toEndOf="@+id/rgTypeVehicle"
                app:layout_constraintStart_toStartOf="@+id/rgTypeVehicle"
                app:layout_constraintTop_toBottomOf="@+id/rgTypeVehicle" />

            <RadioGroup
                android:id="@+id/rgTypeVehicle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginLeft="@dimen/big_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <RadioButton
                    android:id="@+id/rbCarro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/car_text" />

                <RadioButton
                    android:id="@+id/rbMoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/moto_text" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:text="@string/vehicle_type_text"
                app:layout_constraintBottom_toBottomOf="@+id/rgTypeVehicle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rgTypeVehicle" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:text="@string/in_register_text"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:background="@drawable/shape_border_sections"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCalcPrice"
                android:layout_width="@dimen/btn_normal_width"
                android:layout_height="@dimen/btn_normal_height"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:background="@drawable/shape_button"
                android:text="@string/calc_price_text"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/btn_normal_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvValueToPay" />

            <Button
                android:id="@+id/btnPayment"
                android:layout_width="@dimen/btn_normal_width"
                android:layout_height="@dimen/btn_normal_height"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:background="@drawable/shape_button"
                android:text="@string/pay_text"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/btn_normal_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCalcPrice" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:text="@string/out_register_text"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvValueToPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:text="@string/value_to_pay_text"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>