<resources>
    <string name="app_name">Estacionamiento</string>
    <string name="plate_number">Ingrese el numero de placa.</string>
    <string name="in_register_text">Registrar un Ingreso.</string>
    <string name="vehicle_type_text">Tipo de vehículo :</string>
    <string name="car_text">Carro</string>
    <string name="moto_text">Motocicleta</string>
    <string name="cilindraje_text">Cilindraje en CC.</string>
    <string name="btn_accept_text">Aceptar</string>
    <string name="out_register_text">Registrar una Salida.</string>
    <string name="value_to_pay_text">Valor a pagar.</string>
    <string name="calc_price_text">Calcular</string>
    <string name="pay_text">Pagar</string>

    //toast
    <string name="empty_fields">No debe haber campos vacios.</string>
    <string name="placa_min_size">La placa debe tener al menos 5 caracteres.</string>
    <string name="placa_max_size">La placa debe tener maximo 6 caracteres.</string>

    //alert
    <string name="info_title">Información.</string>
    <string name="inserted_correctly">Se agrego correctamente.</string>
    <string name="unauthorized_plate">Placa no autorizada en este día.</string>
    <string name="unknown_error">Error desconocido, intente nuevamente.</string>
    <string name="please_wait">Por favor espere…</string>
    <string name="not_found_vehicle">Vehiculo no encontrado.</string>
    <string name="parking_full">Al estacionamiento no le caben más vehículos de este tipo.</string>
    <string name="vehicle_exist">El vehículo ya se encuentra registrado.</string>
    <string name="calc_value_to_pay_first">Primero calcule el valor a pagar.</string>
    <string name="payment_succeed">Pagado.</string>
</resources>
